--- a/app/views/stock/stock.html
+++ b/app/views/stock/stock.html
@@ -1,4 +1,262 @@
 <p class="karma">karma_stock</p>
 <div class="col-lg-12">
-	Stock
+	<div class="col-lg-6">
+		<div class="panel panel-default">
+		  	<div class="panel-heading">Processeurs <button class="btn btn-sm btn-success pull-right"><i class="fa fa-shopping-cart"></i> Commander</button><div class="clearfix"></div></div>
+		  	<div style="max-height:300px; overflow-y: auto">
+			  	<table class="table table-striped">
+				    <thead>
+				        <tr>
+				            <th>#</th>
+				            <th>Modèle</th>
+				            <th>Fréquence</th>
+				            <th>Indice perf.</th>
+				            <th>Pop.</th>
+				            <th>Qté.</th>
+				        </tr>
+				    </thead>
+				    <tbody>
+				        <tr>
+				            <th scope="row">1</th>
+				            <td>Intel Core i7 4680k</td>
+				            <td>3.40 Ghz</td>
+				            <td style="color: green">79%</td>
+				            <td>87%</td>
+				            <td>42</td>
+				        </tr>
+				    </tbody>
+				</table>
+			</div>
+		</div>
+	</div>
+
+	<div class="col-lg-6">
+		<div class="panel panel-default">
+		  	<div class="panel-heading">Mémoire <button class="btn btn-sm btn-success pull-right"><i class="fa fa-shopping-cart"></i> Commander</button><div class="clearfix"></div></div>
+		  	<div style="max-height:300px; overflow-y: auto">
+			  	<table class="table table-striped">
+				    <thead>
+				        <tr>
+				            <th>#</th>
+				            <th>Modèle</th>
+				            <th>Fréquence</th>
+				            <th>Capacité</th>
+				            <th>Format</th>
+				            <th>Indice perf.</th>
+				            <th>Pop.</th>
+				            <th>Qté.</th>
+				        </tr>
+				    </thead>
+				    <tbody>
+				        <tr>
+				            <th scope="row">1</th>
+				            <td>Kingston VR4096MBCHS3</td>
+				            <td>1333 Mhz</td>
+				            <td>4 GO</td>
+				            <td>DDR3</td>
+				            <td style="color: green">57%</td>
+				            <td>81%</td>
+				            <td>9</td>
+				        </tr>
+				    </tbody>
+				</table>
+			</div>
+		</div>
+	</div>
+
+	<div class="col-lg-6">
+		<div class="panel panel-default">
+		  	<div class="panel-heading">Disques dur <button class="btn btn-sm btn-success pull-right"><i class="fa fa-shopping-cart"></i> Commander</button><div class="clearfix"></div></div>
+		  	<div style="max-height:300px; overflow-y: auto">
+			  	<table class="table table-striped">
+				    <thead>
+				        <tr>
+				            <th>#</th>
+				            <th>Modèle</th>
+				            <th>SSD</th>
+				            <th>Capacité</th>
+				            <th>Indice perf.</th>
+				            <th>Pop.</th>
+				            <th>Qté.</th>
+				        </tr>
+				    </thead>
+				    <tbody>
+				        <tr>
+				            <th scope="row">1</th>
+				            <td>Segate 1000VB33HSB</td>
+				            <td style="color: green"><i class="fa fa-check"></i></td>
+				            <td>1 TO</td>
+				            <td style="color: green">61%</td>
+				            <td>90%</td>
+				            <td>12</td>
+				        </tr>
+				    </tbody>
+				</table>
+			</div>
+		</div>
+	</div>
+
+	<div class="col-lg-6">
+		<div class="panel panel-default">
+		  	<div class="panel-heading">Cartes mère <button class="btn btn-sm btn-success pull-right"><i class="fa fa-shopping-cart"></i> Commander</button><div class="clearfix"></div></div>
+		  	<div style="max-height:300px; overflow-y: auto">
+			  	<table class="table table-striped">
+				    <thead>
+				        <tr>
+				            <th>#</th>
+				            <th>Modèle</th>
+				            <th>Socket</th>
+				            <th>Format DIMM</th>
+				            <th>Fréquence mémoire</th>
+				            <th>Ports SATA</th>
+				            <th>Indice perf.</th>
+				            <th>Pop.</th>
+				            <th>Qté.</th>
+				        </tr>
+				    </thead>
+				    <tbody>
+				        <tr>
+				            <th scope="row">1</th>
+				            <td>Asus P9B</td>
+				            <td>LGA2011</td>
+				            <td>DDR3</td>
+				            <td>1333 Mhz</td>
+				            <td>4</td>
+				            <td style="color: green">68%</td>
+				            <td>72%</td>
+				            <td>5</td>
+				        </tr>
+				    </tbody>
+				</table>
+			</div>
+		</div>
+	</div>
+
+	<div class="col-lg-6">
+		<div class="panel panel-default">
+		  	<div class="panel-heading">Blocs d'alimentation <button class="btn btn-sm btn-success pull-right"><i class="fa fa-shopping-cart"></i> Commander</button><div class="clearfix"></div></div>
+		  	<div style="max-height:300px; overflow-y: auto">
+			  	<table class="table table-striped">
+				    <thead>
+				        <tr>
+				            <th>#</th>
+				            <th>Modèle</th>
+				            <th>Format</th>
+				            <th>Consommation</th>
+				            <th>Indice perf.</th>
+				            <th>Pop.</th>
+				            <th>Qté.</th>
+				        </tr>
+				    </thead>
+				    <tbody>
+				        <tr>
+				            <th scope="row">1</th>
+				            <td>Corsair 11T9Y</td>
+				            <td>ATX</td>
+				            <td>600 W</td>
+				            <td style="color: green">46%</td>
+				            <td>90%</td>
+				            <td>8</td>
+				        </tr>
+				    </tbody>
+				</table>
+			</div>
+		</div>
+	</div>
+
+	<div class="col-lg-6">
+		<div class="panel panel-default">
+		  	<div class="panel-heading">Boitiers <button class="btn btn-sm btn-success pull-right"><i class="fa fa-shopping-cart"></i> Commander</button><div class="clearfix"></div></div>
+		  	<div style="max-height:300px; overflow-y: auto">
+			  	<table class="table table-striped">
+				    <thead>
+				        <tr>
+				            <th>#</th>
+				            <th>Modèle</th>
+				            <th>Format</th>
+				            <th>Couleur</th>
+				            <th>Ventilateurs</th>
+				            <th>Indice perf.</th>
+				            <th>Pop.</th>
+				            <th>Qté.</th>
+				        </tr>
+				    </thead>
+				    <tbody>
+				        <tr>
+				            <th scope="row">1</th>
+				            <td>CoolerMaster MX12B</td>
+				            <td>ATX</td>
+				            <td>Noir</td>
+				            <td>4</td>
+				            <td style="color: green">62%</td>
+				            <td>90%</td>
+				            <td>2</td>
+				        </tr>
+				    </tbody>
+				</table>
+			</div>
+		</div>
+	</div>
+
+	<div class="col-lg-6">
+		<div class="panel panel-default">
+		  	<div class="panel-heading">Lecteurs DVD/BD <button class="btn btn-sm btn-success pull-right"><i class="fa fa-shopping-cart"></i> Commander</button><div class="clearfix"></div></div>
+		  	<div style="max-height:300px; overflow-y: auto">
+			  	<table class="table table-striped">
+				    <thead>
+				        <tr>
+				            <th>#</th>
+				            <th>Modèle</th>
+				            <th>Type</th>
+				            <th>Indice perf.</th>
+				            <th>Pop.</th>
+				            <th>Qté.</th>
+				        </tr>
+				    </thead>
+				    <tbody>
+				        <tr>
+				            <th scope="row">1</th>
+				            <td>Pioneer BD12PT</td>
+				            <td>Blueray</td>
+				            <td style="color: green">63%</td>
+				            <td>90%</td>
+				            <td>2</td>
+				        </tr>
+				    </tbody>
+				</table>
+			</div>
+		</div>
+	</div>
+
+	<div class="col-lg-6">
+		<div class="panel panel-default">
+		  	<div class="panel-heading">Cartes graphique <button class="btn btn-sm btn-success pull-right"><i class="fa fa-shopping-cart"></i> Commander</button><div class="clearfix"></div></div>
+		  	<div style="max-height:300px; overflow-y: auto">
+			  	<table class="table table-striped">
+				    <thead>
+				        <tr>
+				            <th>#</th>
+				            <th>Modèle</th>
+				            <th>Mémoire</th>
+				            <th>Sorties vidéo</th>
+				            <th>Indice perf.</th>
+				            <th>Pop.</th>
+				            <th>Qté.</th>
+				        </tr>
+				    </thead>
+				    <tbody>
+				        <tr>
+				            <th scope="row">1</th>
+				            <td>GTX 1080Ti</td>
+				            <td>11 GO</td>
+				            <td>4</td>
+				            <td style="color: green">87%</td>
+				            <td>90%</td>
+				            <td>2</td>
+				        </tr>
+				    </tbody>
+				</table>
+			</div>
+		</div>
+	</div>
 </div>
