Event Queue system added + buying implemented + some improvements

--- a/app/views/management/management.html
+++ b/app/views/management/management.html
@@ -1,3 +1,45 @@
 <div class="col-lg-12">
-	Logistique
+	<div class="col-lg-6">
+		<div class="panel panel-default">
+		  	<div class="panel-heading"><i class="fa fa-cube"></i> Gestion de la réception des colis</div>
+		  	<div class="panel-content" style="padding: 5px;">
+			  	<div class="alert alert-info" role="alert">Info ! Lorsque vous commandez des colis auprès de vos fournisseurs, vous devez assigner la tâche de réception à vous-même ou à un de vos employés. Si personne n'est assigné à la réception, le colis sera livré dans les prochaines 24h. Un avis de passage sera alors déposé par le livreur afin de vous prévenir.</div>
+			  	<table class="table table-striped">
+				    <thead>
+				        <tr>
+				            <th>#</th>
+				            <th>Nom</th>
+				            <th>Tranche horraire</th>
+				            <th>Rôle</th>
+				            <th></th>
+				        </tr>
+				    </thead>
+				    <tbody>
+				        <tr>
+				            <th scope="row">1</th>
+				            <td>Joris Bertomeu</td>
+				            <td>08/03/2017 entre 7:05 et 7:07</td>
+				            <td>Patron</td>
+				            <td><button class="btn btn-xs btn-danger"><i class="fa fa-times"></i></button></td>
+				        </tr>
+				        <tr>
+				            <th scope="row">1</th>
+				            <td>Joris Bertomeu</td>
+				            <td>08/03/2017 entre 7:37 et 7:39</td>
+				            <td>Patron</td>
+				            <td><button class="btn btn-xs btn-danger"><i class="fa fa-times"></i></button></td>
+				        </tr>
+				        <tr>
+				            <th scope="row">1</th>
+				            <td>Joris Bertomeu</td>
+				            <td>08/03/2017 entre 8:48 et 8:50</td>
+				            <td>Patron</td>
+				            <td><button class="btn btn-xs btn-danger"><i class="fa fa-times"></i></button></td>
+				        </tr>
+				    </tbody>
+				</table>
+				<button class="btn btn-success btn-block"><i class="fa fa-chain"></i> Assigner une personne</button>
+			</div>
+		</div>
+	</div>
 </div>
