--- a/app/views/stock/stock.html
+++ b/app/views/stock/stock.html
@@ -262,7 +262,7 @@
 </div>
 
 <div class="modal fade" id="stockModal" tabindex="-1" role="dialog" aria-labelledby="stockModalLabel">
-	<div class="modal-dialog modal-lg" role="document">
+	<div class="modal-dialog" style="width: 80%" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
