External Resources added for JSON description object + management of these

--- a/app/app.css
+++ b/app/app.css
@@ -19,6 +19,14 @@
     color: #337ab7;
 }
 
+.greenText {
+    color: green;
+}
+
+.redText {
+    color: red;
+}
+
 .text-center {
     text-align: center;
 }
