--- a/app/views/stock/stock.html
+++ b/app/views/stock/stock.html
@@ -66,7 +66,7 @@
 
 	<div class="col-lg-12">
 		<div class="panel panel-default">
-		  	<div class="panel-heading">Disques dur <button class="btn btn-sm btn-success pull-right"><i class="fa fa-shopping-cart"></i> Commander</button><div class="clearfix"></div></div>
+		  	<div class="panel-heading">Disques dur <button data-toggle="modal" ng-click="system._.commandeType=3" data-target="#stockModal" class="btn btn-sm btn-success pull-right"><i class="fa fa-shopping-cart"></i> Commander</button><div class="clearfix"></div></div>
 		  	<div style="max-height:300px; overflow-y: auto">
 			  	<table class="table table-striped">
 				    <thead>
@@ -98,7 +98,7 @@
 
 	<div class="col-lg-12">
 		<div class="panel panel-default">
-		  	<div class="panel-heading">Cartes mère <button class="btn btn-sm btn-success pull-right"><i class="fa fa-shopping-cart"></i> Commander</button><div class="clearfix"></div></div>
+		  	<div class="panel-heading">Cartes mère <button data-toggle="modal" ng-click="system._.commandeType=4" data-target="#stockModal" class="btn btn-sm btn-success pull-right"><i class="fa fa-shopping-cart"></i> Commander</button><div class="clearfix"></div></div>
 		  	<div style="max-height:300px; overflow-y: auto">
 			  	<table class="table table-striped">
 				    <thead>
@@ -267,8 +267,10 @@
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 				<h4 class="modal-title" id="stockModalLabel">Commandes - 
-				<span ng-show="system._.commandeType===1">Processeurs</span>
-				<span ng-show="system._.commandeType===2">Mémoire</span>
+					<span ng-show="system._.commandeType===1">Processeurs</span>
+					<span ng-show="system._.commandeType===2">Mémoire</span>
+					<span ng-show="system._.commandeType===3">Disques dur</span>
+					<span ng-show="system._.commandeType===4">Cartes mère</span>
 				</h4>
 			</div>
 			<div class="modal-body">
