--- a/app/app.css
+++ b/app/app.css
@@ -20,6 +20,31 @@
     color: #337ab7;
 }
 
+.clientContainer {
+    border: 1px solid #dcdcdc !important;
+    background-color: #fafafa;
+    border-radius: 5px;
+    padding: 10px;
+    padding-right: 0px !important;
+    width: 200px;
+}
+
+.caretClientContainer {
+    padding-top: 10px;
+    float: right;
+    border-left: 1px solid #CCC;
+    padding-left: 6px;
+    margin-top: -10px;
+    height: 40px;
+    cursor: pointer;
+    width: 20px;
+    border-radius: 0px 5px 5px 0px;
+}
+
+.caretClientContainer:hover {
+    background-color: #EFEFEF;
+}
+
 .img-circle {
     border-radius: 50%;
 }
@@ -62,6 +87,26 @@
 	display: none;
 }
 
+.closeBackdrop {
+    position: absolute;
+    right: 20px;
+    top: 5px;
+    background-color: rgba(0, 0, 0, 0.1);
+    padding: 5px;
+    border: 1px solid #CCC;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.hardwareContainer {
+    font-size: 11px;
+    padding: 5px;
+    border: 1px solid #CCC;
+    margin-top: 10px;
+    border-radius: 5px;
+    background-color: #fafafa;
+}
+
 .indice75 {
     color: #27ae60;
 }
@@ -80,7 +125,7 @@
 
 .rightPanel {
 	background-color: white;
-    position: absolute;
+    position: fixed;
     right: 0px;
     color: black;
     height: 100%;
